[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nutritionfacts-parser"
version = "0.1.0"
description = "A tool to scrape, parse, and extract video metadata and transcripts from NutritionFacts.org sitemaps."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "tqdm>=4.65.0",
    "click>=8.1.0",
]

[project.scripts]
nutritionfacts-parser = "nutritionfacts_parser.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
